objects/FieloCH__AsynchProcess__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FieloCH__BadgeMemberTimeUnit__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Estimated time to process a badgemember (in milliseconds - ms). It ranges from null to 10,000 ms, when null is a complete synchronous process and 10,000 is completely asynchronously.</inlineHelpText>
        <label>BadgeMemberTimeUnit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__EventTimeUnit__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Estimated time to process an event (in milliseconds - ms). It ranges from null to 10,000 ms, when null is a complete synchronous process and 10,000 is completely asynchronously.</inlineHelpText>
        <label>EventTimeUnit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__GlobalFilter__c</fullName>
        <inlineHelpText>Global challenges could add a lot of unnecessary processing. In order to avoid the segmentation overhead, this filter is a pre-segmentation that match fields from the Challenge and the Member. For example country</inlineHelpText>
        <label>GlobalFilter</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Prefilter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, a Badge Member should be part of the document BADGESFILTER to be processed</inlineHelpText>
        <label>Prefilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__RewardTimeUnit__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Estimated time to process a reward challenge (in milliseconds - ms). It ranges from null to 10,000 ms, when null is a complete synchronous process and 10,000 is completely asynchronously.</inlineHelpText>
        <label>RewardTimeUnit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__SubscriptionTimeUnit__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Estimated time to process a challenge member (in milliseconds - ms). It ranges from null to 10,000 ms, when null is a complete synchronous process and 10,000 is completely asynchronously.</inlineHelpText>
        <label>SubscriptionTimeUnit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asynchronous Process</label>
</CustomObject>